fix double api call due tab layout and navigation

--- a/app/src/main/res/layout/activity_side_bar.xml
+++ b/app/src/main/res/layout/activity_side_bar.xml
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:text="v0.9.4 beta" />
+                android:text="" />
         </LinearLayout>
     </com.google.android.material.navigation.NavigationView>
 
