--- a/app/src/main/res/layout/state_name_list_fragment.xml
+++ b/app/src/main/res/layout/state_name_list_fragment.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginRight="10dp"
     android:orientation="vertical">
 
@@ -19,21 +20,22 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:drawableLeft="@drawable/ic_arrow_upward_black_24dp"
-            android:drawableTint="@color/textColorStatConfirmed"
+            app:drawableTint="@color/textColorStatConfirmed"
             android:gravity="center"
-            android:text="bdfb"
+            android:text=""
             android:textColor="@android:color/white" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/state_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
-        android:text="jdsgfjsh"
+        android:text=""
+        android:textStyle="bold"
         android:textSize="16dp"
         android:textColor="@color/colorBackground" />
 
