--- a/app/src/main/res/layout/fragment_question_answer_list.xml
+++ b/app/src/main/res/layout/fragment_question_answer_list.xml
@@ -8,11 +8,10 @@
         android:id="@+id/question_answer_expan"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:groupIndicator="@drawable/expandable"
-        android:layoutDirection="rtl"
         android:background="@android:color/white"
-        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
         android:divider="@android:color/darker_gray"
-        android:dividerHeight="0.5dp"/>
+        android:dividerHeight="0.5dp"
+        android:groupIndicator="@drawable/expandable"
+        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />
 
 </LinearLayout>
