--- a/app/src/main/res/layout/activity_state_detail.xml
+++ b/app/src/main/res/layout/activity_state_detail.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    tools:context=".StateDetailActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".StateDetailActivity">
 
     <fragment
         android:id="@+id/current"
         android:name="live.combatemic.app.StateDetailFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"/>
+        tools:ignore="MissingConstraints" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/creativity"
-        card_view:cardCornerRadius="3dp"
-        card_view:cardElevation="5dp"
-        card_view:cardMaxElevation="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        card_view:cardCornerRadius="3dp"
+        card_view:cardElevation="5dp"
+        card_view:cardMaxElevation="10dp"
         tools:ignore="MissingConstraints">
 
 
@@ -31,17 +31,15 @@
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
             android:orientation="horizontal"
-            android:paddingTop="@dimen/text_margin"
-            android:paddingRight="@dimen/text_margin"
-            android:paddingBottom="@dimen/text_margin"
+            android:padding="@dimen/text_margin"
             android:weightSum="1">
 
             <live.combatemic.app.Common.SquareImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="0.2"
                 android:layout_marginRight="2dp"
+                android:layout_weight="0.2"
                 android:background="@mipmap/ic_sing_song"
                 android:gravity="center" />
 
@@ -76,8 +74,8 @@
                 android:layout_gravity="center"
                 android:layout_weight="0.05"
                 android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
-                app:drawableTint="@color/colorBackground"
-                android:gravity="center" />
+                android:gravity="center"
+                app:drawableTint="@color/colorBackground" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
