--- a/app/src/main/res/layout/fragment_state_item_list.xml
+++ b/app/src/main/res/layout/fragment_state_item_list.xml
@@ -18,117 +18,132 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:orientation="vertical"
         android:paddingStart="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/city_name"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="City Name"
                 android:textColor="@android:color/black"
                 android:textStyle="bold" />
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:gravity="right"
                 android:orientation="horizontal"
                 android:weightSum="1">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.6"
+                    android:layout_marginRight="5dp"
                     android:text="Confirmed:"
                     android:textColor="@color/textColorStatConfirmed" />
 
                 <TextView
                     android:id="@+id/city_confirmed"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.4"
                     android:gravity="center"
                     android:text="20"
                     android:textColor="@color/textColorStatConfirmed" />
             </LinearLayout>
         </LinearLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/line_black" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.33"
+                android:layout_gravity="left"
+                android:layout_weight="1"
+                android:gravity="left"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.4"
+                    android:layout_marginRight="5dp"
                     android:text="Active:"
                     android:textColor="@color/textColorStatActive" />
 
                 <TextView
                     android:id="@+id/city_active"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.6"
                     android:gravity="center"
                     android:text="20"
                     android:textColor="@color/textColorStatActive" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.33"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.7"
+                    android:layout_marginRight="5dp"
                     android:text="Recovered:"
                     android:textColor="@color/textColorStatRecovered" />
 
                 <TextView
                     android:id="@+id/city_recovered"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.3"
                     android:gravity="center"
                     android:text="20"
                     android:textColor="@color/textColorStatRecovered" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.33"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:gravity="right"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.4"
+                    android:layout_marginRight="5dp"
                     android:text="Death:"
                     android:textColor="@color/textColorStatDeath" />
 
                 <TextView
                     android:id="@+id/city_death"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.6"
                     android:gravity="center"
                     android:text="20"
                     android:textColor="@color/textColorStatDeath" />
