--- a/app/src/main/res/layout/activity_city_scrolling.xml
+++ b/app/src/main/res/layout/activity_city_scrolling.xml
@@ -11,9 +11,20 @@
 
     <include layout="@layout/top_district" />
 
+    <ExpandableListView
+        android:id="@+id/city_data_expan"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="0.5dp"
+        android:groupIndicator="@drawable/expandable"
+        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />
+
     <ListView
         android:id="@+id/city_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
 </LinearLayout>
