--- a/app/src/main/res/layout/top_district.xml
+++ b/app/src/main/res/layout/top_district.xml
@@ -91,7 +91,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_gravity="center"
-                            android:background="#FF4500"
+                            android:background="#FFCC00"
                             android:gravity="center"
                             android:orientation="vertical"
                             android:padding="@dimen/text_margin">
