--- a/app/src/main/res/layout/activity_city_scrolling.xml
+++ b/app/src/main/res/layout/activity_city_scrolling.xml
@@ -17,9 +17,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:divider="@android:color/darker_gray"
-        android:dividerHeight="0.5dp"
-        android:groupIndicator="@drawable/expandable"
-        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />
+        android:dividerHeight="0.5dp" />
 
     <ListView
         android:id="@+id/city_list"
