--- a/app/src/main/res/layout/fragment_question_answer_group.xml
+++ b/app/src/main/res/layout/fragment_question_answer_group.xml
@@ -1,22 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
-    android:orientation="vertical">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/question_header"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingTop="15dp"
-        android:paddingRight="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:paddingBottom="15dp"
-        android:text="Question"
+        android:layout_alignParentLeft="true"
+        android:layout_toStartOf="@+id/dropdwon"
+        android:fontFamily="@font/custom_font"
+        android:text=""
         android:textAppearance="?attr/textAppearanceListItem"
         android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:theme="@style/AppTheme" />
+        android:textStyle="bold" />
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/dropdwon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/expandable_down"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:src="@drawable/expandable_down" />
+
+        <ImageView
+            android:id="@+id/expandable_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/expandable_up"
+            android:visibility="gone" />
+    </LinearLayout>
+
+</RelativeLayout>
+
