--- a/app/src/main/res/layout/top_district.xml
+++ b/app/src/main/res/layout/top_district.xml
@@ -83,15 +83,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
+                        card_view:cardBackgroundColor="#FFCC00"
                         card_view:cardCornerRadius="3dp"
                         card_view:cardElevation="5dp"
-                        card_view:cardMaxElevation="10dp">
+                        card_view:cardMaxElevation="6dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_gravity="center"
-                            android:background="#FFCC00"
                             android:gravity="center"
                             android:orientation="vertical"
                             android:padding="@dimen/text_margin">
@@ -147,7 +147,7 @@
                         android:layout_margin="10dp"
                         card_view:cardCornerRadius="3dp"
                         card_view:cardElevation="5dp"
-                        card_view:cardMaxElevation="10dp">
+                        card_view:cardMaxElevation="6dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -210,7 +210,7 @@
                         android:layout_margin="10dp"
                         card_view:cardCornerRadius="3dp"
                         card_view:cardElevation="5dp"
-                        card_view:cardMaxElevation="10dp">
+                        card_view:cardMaxElevation="6dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -272,7 +272,7 @@
                         android:layout_margin="10dp"
                         card_view:cardCornerRadius="3dp"
                         card_view:cardElevation="5dp"
-                        card_view:cardMaxElevation="10dp">
+                        card_view:cardMaxElevation="6dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -334,7 +334,7 @@
                         android:layout_margin="10dp"
                         card_view:cardCornerRadius="3dp"
                         card_view:cardElevation="5dp"
-                        card_view:cardMaxElevation="10dp">
+                        card_view:cardMaxElevation="6dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
